--- a/GAN.ipynb
+++ b/GAN.ipynb
@@ -6,7 +6,7 @@
     "colab": {
       "name": "GAN.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPt1QivYYK98ycJWlPL00lL",
+      "authorship_tag": "ABX9TyO7n0ZLkQZYcoNcvhdyASgd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/LFBBMRML/Colab_GAN/blob/Colab_Code/GAN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/LFBBMRML/Colab_GAN/blob/Colab_Code-neueArchitekturFuerG%26D/GAN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -137,49 +137,38 @@
       "source": [
         "def generator_model():\n",
         "  model = tf.keras.Sequential()\n",
-        "  model.add(layers.Dense(8*8*256, input_shape=(100, )))   #(8*8*256, use_bias=False, input_shape=(100, )))\n",
+        "  model.add(layers.Dense(8*8*256, use_biase=False, input_shape=(100, )))   #(8*8*256, use_bias=False, input_shape=(100, )))\n",
         "  model.add(layers.BatchNormalization(momentum=0.99))      #Default: training=False \n",
-        "  model.add(layers.LeakyReLU(alpha=0.1))\n",
+        "  model.add(layers.LeakyReLU(alpha=0.2))\n",
         "\n",
         "  model.add(layers.Reshape((8, 8, 256)))\n",
         "  assert model.output_shape == (None, 8, 8, 256)          #wenn Output_Shape dem gewollten entspricht (also None, 7, 7, 256) läuft das Programm weiter. Ansonsten gibt es einfach einen AsserttionError.\n",
         "  model.add(layers.Dropout(0.5))\n",
         "\n",
-        "  model.add(layers.Conv2DTranspose(128, (5, 5), strides=(1,1), padding = 'same'))\n",
+        "  model.add(layers.Conv2DTranspose(128, (5, 5), strides=(1,1), padding = 'same', use_bias=False))\n",
         "  assert model.output_shape == (None, 8, 8, 128)          #Note: None is the batch size\n",
         "  model.add(layers.BatchNormalization(momentum=0.99))\n",
-        "  model.add(layers.LeakyReLU(alpha=0.1))\n",
+        "  model.add(layers.LeakyReLU(alpha=0.2))\n",
         "  \n",
         "\n",
-        "  model.add(layers.Conv2DTranspose(64, (5,5), strides=(2,2), padding = 'same'))\n",
+        "  model.add(layers.Conv2DTranspose(64, (5,5), strides=(2,2), padding = 'same', use_bias=False))\n",
         "  assert model.output_shape == (None, 16, 16, 64)\n",
         "  model.add(layers.BatchNormalization(momentum=0.99))\n",
-        "  model.add(layers.LeakyReLU(alpha=0.1))\n",
+        "  model.add(layers.LeakyReLU(alpha=0.2))\n",
         "  \n",
-        "  model.add(layers.Conv2DTranspose(32, (5,5), strides=(2,2), padding = 'same'))\n",
+        "  model.add(layers.Conv2DTranspose(32, (5,5), strides=(2,2), padding = 'same', use_bias = False))\n",
         "  assert model.output_shape == (None, 32, 32, 32)\n",
         "  model.add(layers.BatchNormalization(momentum=0.99))\n",
-        "  model.add(layers.LeakyReLU(alpha=0.1))\n",
+        "  model.add(layers.LeakyReLU(alpha=0.2))\n",
         "\n",
-        "  model.add(layers.Conv2DTranspose(3, (5,5), strides=(1,1), padding='same'))\n",
+        "  model.add(layers.Conv2DTranspose(3, (5,5), strides=(1,1), padding='same', use_bias = False))\n",
         "  assert model.output_shape == (None, 32, 32, 3)\n",
-        "  model.add(layers.Activation('softmax'))\n",
+        "  model.add(layers.Activation('tanh'))\n",
         "\n",
         "  #model.summary()\n",
         "  return model"
       ],
       "execution_count": 18,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "0_Nc6-kUqUI4"
-      },
-      "source": [
-        "# generator_model() Der Aufruf ist glaub ich eher sinnfrei"
-      ],
-      "execution_count": null,
       "outputs": []
     },
     {
@@ -239,24 +228,24 @@
         "  model = tf.keras.Sequential()\n",
         "\n",
         "  model.add(layers.Conv2D(64, (5, 5), strides=(2, 2), padding='same', input_shape=[32, 32, 3]))\n",
-        "  model.add(layers.LeakyReLU(alpha=0.1)) #parameterübergabe: alpha=0.2\n",
+        "  model.add(layers.LeakyReLU(alpha=0.2)) #parameterübergabe: alpha=0.2\n",
         "  model.add(layers.Dropout(0.7))\n",
         "  \n",
         "  model.add(layers.Conv2D(128, (5, 5), strides=(2, 2), padding='same'))\n",
-        "  model.add(layers.LeakyReLU(alpha=0.1))\n",
+        "  model.add(layers.LeakyReLU(alpha=0.2))\n",
         "  model.add(layers.Dropout(0.7))\n",
         "\n",
-        "  model.add(layers.Conv2D(256, (5, 5), strides=(2, 2), padding='same'))\n",
-        "  model.add(layers.LeakyReLU(alpha=0.1))\n",
-        "  model.add(layers.Dropout(0.7))\n",
+        "  #model.add(layers.Conv2D(256, (5, 5), strides=(2, 2), padding='same'))\n",
+        "  #model.add(layers.LeakyReLU(alpha=0.2))\n",
+        "  #model.add(layers.Dropout(0.7))\n",
         "\n",
-        "  model.add(layers.Conv2D(512, (5, 5), strides=(2, 2), padding='same'))\n",
-        "  model.add(layers.LeakyReLU(alpha=0.1))\n",
-        "  model.add(layers.Dropout(0.7))\n",
+        "  #model.add(layers.Conv2D(512, (5, 5), strides=(2, 2), padding='same'))\n",
+        "  #model.add(layers.LeakyReLU(alpha=0.2))\n",
+        "  #model.add(layers.Dropout(0.7))\n",
         "\n",
         "  model.add(layers.Flatten())\n",
         "  model.add(layers.Dense(1))\n",
-        "  model.add(layers.Activation('softmax'))\n",
+        "  #model.add(layers.Activation('softmax'))\n",
         "\n",
         "  #model.summary()\n",
         "  return model"
