--- a/MA/00Masterfile.tex
+++ b/MA/00Masterfile.tex
@@ -41,7 +41,7 @@
 \usepackage{pgfplots}
 \pgfplotsset{compat=1.10}
 \usepackage{caption}
-
+\usepackage{tabulary}
 %Formale Gestaltung nach Studienamt Vorschlag
 %Serifenschrift (Ähnelt Times New Roman)
 \usepackage{times}
